--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     .fade-in.visible{opacity:1;transform:translateY(0)}
     /* sticky nav */
     nav{backdrop-filter: blur(6px);background:rgba(255,255,255,0.35)}
-    /* gallery */
-    .swipe-container{position:relative;overflow:hidden;border-radius:1rem}
-    .slides{display:flex;transition:transform .5s ease}
-    .slide{min-width:100%;height:360px;background-size:cover;background-position:center}
+    /* gallery grid specifics */
+    .grid-photo img{height:16rem;object-fit:cover}
+    .grid-video video{height:12rem;object-fit:cover}
+    @media(max-width:768px){ .grid-photo img, .grid-video video{height:12rem} }
+    /* guestbook & messages */
+    .message-time{font-size:.75rem;color:#94a3b8}
     /* scroll-to-top */
     #topBtn{position:fixed;right:18px;bottom:18px;background:var(--accent);color:#fff;padding:12px;border-radius:999px;box-shadow:0 6px 18px rgba(0,0,0,0.15);display:none;z-index:40}
-    /* responsive tweaks */
-    @media(max-width:768px){.slide{height:220px}}
   </style>
 </head>
 <body class="text-gray-800">
@@ -52,6 +52,7 @@
         <a href="#story" class="text-white hover:underline">Our Story</a>
         <a href="#details" class="text-white hover:underline">Details</a>
         <a href="#gallery" class="text-white hover:underline">Gallery</a>
+        <a href="#videos" class="text-white hover:underline">Videos</a>
         <a href="#rsvp" class="text-white hover:underline">RSVP</a>
         <button id="shareBtn" class="px-3 py-1 bg-white/90 text-blue-800 rounded-full shadow">Share</button>
       </div>
@@ -70,11 +71,13 @@
       <h1 class="text-6xl md:text-7xl mt-4 text-blue-900">Jackson & Florence</h1>
       <p class="mt-3 text-gray-700">Together with their families, they invite you to celebrate their marriage.</p>
       <p class="mt-4 text-lg text-gray-800 font-semibold">Saturday, 6 December 2025 • 11:00 AM</p>
-      <p class="mt-1 text-sm text-gray-600">The Church of Jesus Christ of Latter-day Saints, Agona Swedru, Ekwamkrom</p>
+      <p class="mt-1 text-sm text-gray-600">The Church of Jesus Christ of Latter-day Saints, Ekwamkrom Barrier, Agona Swedru.</p>
       <div class="mt-6 flex items-center justify-center gap-4">
         <a href="#rsvp" class="px-6 py-3 bg-blue-700 text-white rounded-full shadow hover:bg-blue-800">RSVP</a>
         <a href="#map" class="px-6 py-3 bg-white text-blue-800 rounded-full shadow hover:bg-blue-50">View Location</a>
       </div>
+
+      <!-- Music controls (restored) -->
       <div class="mt-6 flex items-center justify-center gap-3">
         <audio id="bgAudio" preload="none" loop>
           <source src="assets/perfect.mp3" type="audio/mpeg">
@@ -83,6 +86,7 @@
         <button id="audioBtn" class="px-4 py-2 bg-white text-blue-800 rounded-full shadow">Play Music</button>
         <button id="muteBtn" class="px-3 py-2 bg-white text-blue-800 rounded-full shadow hidden">Pause</button>
       </div>
+
     </div>
   </header>
 
@@ -104,11 +108,11 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
           <h3 class="text-xl font-semibold">Ceremony</h3>
           <p class="mt-2"><strong>Date:</strong> Saturday, 6th December 2025</p>
           <p><strong>Time:</strong> 11:00 AM</p>
-          <p><strong>Venue:</strong> The Church of Jesus Christ of Latter-day Saints, Agona Swedru, Ekwamkrom</p>
+          <p><strong>Venue:</strong> The Church of Jesus Christ of Latter-day Saints, Ekwamkrom Barrier, Agona Swedru </p>
         </div>
         <div class="p-6 bg-blue-50 rounded-2xl shadow">
           <h3 class="text-xl font-semibold">Family</h3>
-          <p class="mt-2"><strong>Parents:</strong> Mr&Mrs Kumi & Mr&Mrs Ofosu</p>
+          <p class="mt-2"><strong>Parents:</strong> Mr & Mrs Kumi & Mr & Mrs Ofosu</p>
           <p><strong>Dress Code:</strong> Decent Elegant traditional or formal wear</p>
         </div>
       </div>
@@ -123,28 +127,45 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
     </div>
   </section>
 
-  <!-- GALLERY (simple slider) -->
-  <section id="gallery" class="py-12">
-    <div class="max-w-4xl mx-auto px-6 fade-in">
-      <h2 class="text-3xl mb-6 text-center">Gallery</h2>
-      <div class="swipe-container" aria-hidden="false">
-        <div class="slides" id="slides">
-          <div class="slide" style="background-image:url('assets/photo1.jpg')"></div>
-          <div class="slide" style="background-image:url('assets/photo2.jpg')"></div>
-          <div class="slide" style="background-image:url('assets/photo3.jpg')"></div>
-        </div>
-        <div class="flex justify-between items-center mt-4">
-          <button id="prev" class="px-4 py-2 bg-white rounded-full shadow">Prev</button>
-          <button id="next" class="px-4 py-2 bg-white rounded-full shadow">Next</button>
-        </div>
+  <!-- GALLERY (Photo Grid) -->
+  <section id="gallery" class="py-12 bg-white/70 fade-in">
+    <div class="max-w-5xl mx-auto px-6 text-center">
+      <h2 class="text-3xl mb-6">Gallery</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 grid-photo">
+        <img src="assets/photo1.jpg" alt="Photo 1" class="rounded-xl shadow-lg object-cover w-full h-60" loading="lazy">
+        <img src="assets/photo2.jpg" alt="Photo 2" class="rounded-xl shadow-lg object-cover w-full h-60" loading="lazy">
+        <img src="assets/photo3.jpg" alt="Photo 3" class="rounded-xl shadow-lg object-cover w-full h-60" loading="lazy">
+        <img src="assets/photo4.jpg" alt="Photo 4" class="rounded-xl shadow-lg object-cover w-full h-60" loading="lazy">
+        <img src="assets/photo5.jpg" alt="Photo 5" class="rounded-xl shadow-lg object-cover w-full h-60" loading="lazy">
       </div>
-      <p class="text-sm mt-4 text-center text-gray-600">Click the arrows to browse photos. Replace assets/photoX.jpg with your photos.</p>
+      <p class="text-sm mt-4 text-gray-600">A few of our favorite moments together 💕</p>
     </div>
   </section>
 
+  <!-- VIDEO SECTION -->
+  <section id="videos" class="py-12 bg-white/80 fade-in">
+  <div class="max-w-5xl mx-auto px-6 text-center">
+    <h2 class="text-3xl mb-6">Videos</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-4 grid-video">
+      <video muted controls playsinline class="rounded-xl shadow-lg w-full h-60">
+        <source src="assets/video1.mp4" type="video/mp4">
+      </video>
+      <video muted controls playsinline class="rounded-xl shadow-lg w-full h-60">
+        <source src="assets/video2.mp4" type="video/mp4">
+      </video>
+      <video muted controls playsinline class="rounded-xl shadow-lg w-full h-60">
+        <source src="assets/video3.mp4" type="video/mp4">
+      </video>
+      <video muted controls playsinline class="rounded-xl shadow-lg w-full h-60">
+        <source src="assets/video4.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+</section>
+
   <!-- MAP -->
-  <section id="map" class="py-12 bg-white/80">
-    <div class="max-w-4xl mx-auto px-6 text-center fade-in">
+  <section id="map" class="py-12 bg-white/80 fade-in">
+    <div class="max-w-4xl mx-auto px-6 text-center">
       <h2 class="text-3xl mb-4">Location</h2>
       <div class="rounded-xl overflow-hidden shadow">
         <iframe src="https://www.google.com/maps?q=The+Church+of+Jesus+Christ+of+Latter-day+Saints,+Agona+Swedru,+Ekwamkrom&output=embed" style="width:100%;height:420px;border:0;" loading="lazy"></iframe>
@@ -152,9 +173,9 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
     </div>
   </section>
 
-  <!-- GUESTBOOK -->
-  <section id="guestbook" class="py-12 bg-white/70">
-    <div class="max-w-3xl mx-auto px-6 fade-in">
+  <!-- GUESTBOOK (restored) -->
+  <section id="guestbook" class="py-12 bg-white/70 fade-in">
+    <div class="max-w-3xl mx-auto px-6">
       <h2 class="text-3xl mb-4 text-center">Guestbook</h2>
       <form id="guestForm" class="max-w-xl mx-auto p-6 bg-blue-50 rounded-2xl shadow">
         <input id="gName" class="w-full p-3 mb-3 rounded-md" placeholder="Your Name" required>
@@ -199,7 +220,7 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
 
   <script>
     /* --------------------------
-       FINAL SCRIPT (corrected)
+       FINAL SCRIPT (all features)
     ---------------------------*/
 
     // small safe helper
@@ -262,7 +283,7 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
       const tI = setInterval(updateTimer, 1000);
     })();
 
-    // --- Audio controls ---
+    // --- Audio controls (restored with play/pause) ---
     (function audioControls(){
       const audio = document.getElementById('bgAudio');
       const audioBtn = document.getElementById('audioBtn');
@@ -280,20 +301,9 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
       });
     })();
 
-    // --- Simple gallery slider ---
-    (function gallerySlider(){
-      const slides = document.getElementById('slides');
-      const prev = document.getElementById('prev');
-      const next = document.getElementById('next');
-      if(!slides || !prev || !next) return;
-      const total = slides.children.length;
-      let idx = 0;
-      next.addEventListener('click', () => { idx = (idx + 1) % total; slides.style.transform = `translateX(-${idx*100}%)`; });
-      prev.addEventListener('click', () => { idx = (idx - 1 + total) % total; slides.style.transform = `translateX(-${idx*100}%)`; });
-    })();
-
     // ---------- Guestbook (posts to Google Sheet + local fallback) ----------
     (function guestbookInit(){
+      // EDIT: keep your existing webapp URL if you have one
       const GUESTBOOK_WEBAPP = "https://script.google.com/macros/s/AKfycbxYsWHIPG0dcG2FNP9ZEmmaCxmftipkHIA2ao19WMo6Uq3btTHeK2AQ6JXgHz2P7tawzA/exec";
       const gForm = document.getElementById('guestForm');
       const gName = document.getElementById('gName');
@@ -308,7 +318,7 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
           arr.slice().reverse().forEach(m => {
             const el = document.createElement('div');
             el.className = 'p-4 bg-white rounded-xl shadow';
-            el.innerHTML = `<p class="font-semibold">${escapeHtml(m.name)}</p><p class="text-sm text-gray-600">${escapeHtml(m.message)}</p><p class="text-xs text-gray-400 mt-2">${new Date(m.time).toLocaleString()}</p>`;
+            el.innerHTML = `<p class="font-semibold">${escapeHtml(m.name)}</p><p class="text-sm text-gray-600">${escapeHtml(m.message)}</p><p class="message-time mt-2">${new Date(m.time).toLocaleString()}</p>`;
             messagesEl.appendChild(el);
           });
         }catch(e){ console.warn('Failed to load local guestbook', e); messagesEl.innerHTML = ''; }
@@ -324,7 +334,7 @@ Now, as we prepare to begin our forever, we’re grateful for the love that brou
         // 1) show immediately on page
         const uiEl = document.createElement('div');
         uiEl.className = 'p-4 bg-white rounded-xl shadow';
-        uiEl.innerHTML = `<p class="font-semibold">${escapeHtml(name)}</p><p class="text-sm text-gray-600">${escapeHtml(msg)}</p><p class="text-xs text-gray-400 mt-2">${new Date().toLocaleString()}</p>`;
+        uiEl.innerHTML = `<p class="font-semibold">${escapeHtml(name)}</p><p class="text-sm text-gray-600">${escapeHtml(msg)}</p><p class="message-time mt-2">${new Date().toLocaleString()}</p>`;
         messagesEl.prepend(uiEl);
 
         // 2) save locally (fallback)
